--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,6 @@ OrdinaryDiffEq = "6"
 Reexport = "1"
 Roots = "1, 2"
 SciMLBase = "1.19.5"
-StateSpaceSets = "0.1"
+StateSpaceSets = "0.1, 1"
 StaticArrays = "1"
 julia = "1.8"
